# stocklens-dart-mcp

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yml
dart_mcp_server/: __init__.py  __main__.py  _cache.py  _corp_code.py  _http.py  _keyring.py  _metrics.py  _safe.py  server.py  setup_claude.py
dartlens/: __init__.py  __main__.py  _corp_code.py  _http.py  _keyring.py  _metrics.py  _safe.py  _validate.py  doctor.py  server.py  setup_claude.py
tests/: measure_tokens.py  smoke_outputs.py  test_validate.py
